# src/adapters/drivers/http/swagger-output.json
@@ -11,45 +11,6 @@
     }
   ],
   "paths": {
-    "/users/": {
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Create a new user",
-        "description": "",
-        "parameters": [
-          {
-            "name": "User",
-            "in": "body",
-            "description": "User info",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "type": "string",
-                  "example": "john doe"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "mail@mail.com"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "teste123"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/payments/": {
       "post": {
         "tags": [
@@ -271,6 +232,40 @@
         }
       }
     },
+    "/produtos/upload/{id}": {
+      "patch": {
+        "tags": [
+          "Produto"
+        ],
+        "summary": "Upload products image",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Product id"
+          },
+          {
+            "name": "image",
+            "in": "formData",
+            "required": true,
+            "description": "Products image",
+            "schema": {
+              "type": "file"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/orders/": {
       "post": {
         "tags": [
@@ -364,137 +359,41 @@
             "schema": {
               "type": "object",
               "properties": {
-                "properties": {
-                  "type": "object",
-                  "properties": {
-                    "id": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        }
-                      }
-                    },
-                    "client": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        }
-                      }
-                    },
-                    "products": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "array"
-                        },
-                        "items": {
-                          "type": "object",
-                          "properties": {
-                            "type": {
-                              "type": "string",
-                              "example": "object"
-                            },
-                            "properties": {
-                              "type": "object",
-                              "properties": {
-                                "Lanche": {
-                                  "type": "object",
-                                  "properties": {
-                                    "type": {
-                                      "type": "string",
-                                      "example": "string"
-                                    }
-                                  }
-                                },
-                                "Acompanhamento": {
-                                  "type": "object",
-                                  "properties": {
-                                    "type": {
-                                      "type": "string",
-                                      "example": "string"
-                                    }
-                                  }
-                                },
-                                "Bebida": {
-                                  "type": "object",
-                                  "properties": {
-                                    "type": {
-                                      "type": "string",
-                                      "example": "string"
-                                    }
-                                  }
-                                },
-                                "Sobremesa": {
-                                  "type": "object",
-                                  "properties": {
-                                    "type": {
-                                      "type": "string",
-                                      "example": "string"
-                                    }
-                                  }
-                                }
-                              }
-                            }
-                          }
-                        }
-                      }
-                    },
-                    "status": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        }
+                "id": {
+                  "type": "string",
+                  "example": "975dbab0-3cee-4059-8529-2757924ca737"
+                },
+                "client": {
+                  "type": "string",
+                  "example": "john doe"
+                },
+                "products": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "Lanche": {
+                        "type": "string",
+                        "example": "Hamburguer"
+                      },
+                      "Acompanhamento": {
+                        "type": "string",
+                        "example": "Batata Frita"
+                      },
+                      "Bebida": {
+                        "type": "string",
+                        "example": "Suco de Laranja"
+                      },
+                      "Sobremesa": {
+                        "type": "string",
+                        "example": "Pudim"
                       }
                     }
                   }
                 },
-                "example": {
-                  "type": "object",
-                  "properties": {
-                    "id": {
-                      "type": "string",
-                      "example": "975dbab0-3cee-4059-8529-2757924ca737"
-                    },
-                    "client": {
-                      "type": "string",
-                      "example": "john doe"
-                    },
-                    "products": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "Lanche": {
-                            "type": "string",
-                            "example": "Hamburguer"
-                          },
-                          "Acompanhamento": {
-                            "type": "string",
-                            "example": "Batata Frita"
-                          },
-                          "Bebida": {
-                            "type": "string",
-                            "example": "Suco de Laranja"
-                          },
-                          "Sobremesa": {
-                            "type": "string",
-                            "example": "Pudim"
-                          }
-                        }
-                      }
-                    },
-                    "status": {
-                      "type": "string",
-                      "example": "Recebido"
-                    }
-                  }
+                "status": {
+                  "type": "string",
+                  "example": "Recebido"
                 }
               }
             }
@@ -520,17 +419,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "975dbab0-3cee-4059-8529-2757924ca737"
-                }
-              }
+              "type": "string"
             },
             "description": "Order ID"
           }
@@ -622,54 +511,17 @@
             "schema": {
               "type": "object",
               "properties": {
-                "properties": {
-                  "type": "object",
-                  "properties": {
-                    "name": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        }
-                      }
-                    },
-                    "email": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        }
-                      }
-                    },
-                    "cpf": {
-                      "type": "object",
-                      "properties": {
-                        "type": {
-                          "type": "string",
-                          "example": "string"
-                        }
-                      }
-                    }
-                  }
+                "name": {
+                  "type": "string",
+                  "example": "john doe"
                 },
-                "example": {
-                  "type": "object",
-                  "properties": {
-                    "name": {
-                      "type": "string",
-                      "example": "john doe"
-                    },
-                    "email": {
-                      "type": "string",
-                      "example": "mail@mail.com"
-                    },
-                    "cpf": {
-                      "type": "string",
-                      "example": "11122233345"
-                    }
-                  }
+                "email": {
+                  "type": "string",
+                  "example": "mail@mail.com"
+                },
+                "cpf": {
+                  "type": "string",
+                  "example": "11122233345"
                 }
               }
             }
@@ -695,17 +547,7 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "example": {
-                  "type": "string",
-                  "example": "11122233345"
-                }
-              }
+              "type": "string"
             },
             "description": "Client CPF"
           }
